--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -21,10 +21,11 @@
 <body>
   <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-      <span class="text-xl tracking-tight"><img src="./Assets/rit2.jpeg" width="150" height="150" alt="logo"></span>
+      <span class="text-xl tracking-tight"><img src="/media/images/rit.png" width="80" height="80" alt="logo"></span>
     </div>
   </nav>
   <div>{% block body %} {% endblock %}</div>
+  <div>{%block footer%}hello{%endblock%}</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script type="text/javascript">
     var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
