--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -1,70 +1,94 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap"
+    />
+    <link rel="stylesheet" href="/media/styles/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <title>{% block title %}{% endblock %}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" />
-  <link rel="stylesheet" href="/media/styles/style.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
-  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
+    <link rel="stylesheet" href="/media/styles/style.css" />
+  </head>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <link rel="stylesheet" href="/media/styles/style.css">
-</head>
-
-<body>
-  <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
-    <div class="flex items-center flex-shrink-0 text-white mr-6">
-      <span class="text-xl tracking-tight"><img src="/media/images/rit.png" width="80" height="80" alt="logo"></span>
+  <body>
+    <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <span class="text-xl tracking-tight"
+          ><img src="/media/images/rit.png" width="80" height="80" alt="logo"
+        /></span>
+      </div>
+    </nav>
+    <div class="min-h-screen flex flex-row bg-gray-100">
+    <div class="flex flex-col w-80 sm:w-56 bg-white rounded-r-3xl overflow-hidden">
+    {% include 'menu.html' with {'islogin':islogin}%}
     </div>
-  </nav>
-  <div>{% block body %} {% endblock %}</div>
-  <div>{%block footer%}hello{%endblock%}</div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-  <script type="text/javascript">
-    var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
-    var infoMsg = {{ INFO_MESSAGE | json_encode() | raw }}
-    var errorMsg = {{ ERROR_MESSAGE | json_encode() | raw }}
-    var warnMsg = {{ WARNING_MESSAGE | json_encode() | raw }}
-    if (successMsg) {
-      Toastify({
-        text: successMsg,
-        style: {
-          background: "linear-gradient(to right, #00b09b, #96c93d)",
-        }
-      }).showToast();
-    }
-    if (infoMsg) {
-      Toastify({
-        text: infoMsg,
-        style: {
-          background: "linear-gradient(to right, #00b09b, #96c93d)",
-        }
-      }).showToast();
-    }
-    if (errorMsg) {
-      Toastify({
-        text: errorMsg,
-        style: {
-          background: "linear-gradient(to right, #b01800, #c93d3d)",
-        }
-      }).showToast();
-    }
-    if (warnMsg) {
-      Toastify({
-        text: warnMsg,
-        style: {
-          background: "linear-gradient(to right, #00b09b, #96c93d)",
-        }
-      }).showToast();
-    }
-  </script>
-</body>
-
+    <div class="container">{% block body %} {% endblock %}</div>
+    <!-- <div>{% block footer %}hello{% endblock %}</div> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script type="text/javascript">
+      var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
+      var infoMsg = {{ INFO_MESSAGE | json_encode() | raw }}
+      var errorMsg = {{ ERROR_MESSAGE | json_encode() | raw }}
+      var warnMsg = {{ WARNING_MESSAGE | json_encode() | raw }}
+      if (successMsg) {
+        Toastify({
+          text: successMsg,
+          style: {
+            background: "linear-gradient(to right, #00b09b, #96c93d)",
+          }
+        }).showToast();
+      }
+      if (infoMsg) {
+        Toastify({
+          text: infoMsg,
+          style: {
+            background: "linear-gradient(to right, #00b09b, #96c93d)",
+          }
+        }).showToast();
+      }
+      if (errorMsg) {
+        Toastify({
+          text: errorMsg,
+          style: {
+            background: "linear-gradient(to right, #b01800, #c93d3d)",
+          }
+        }).showToast();
+      }
+      if (warnMsg) {
+        Toastify({
+          text: warnMsg,
+          style: {
+            background: "linear-gradient(to right, #00b09b, #96c93d)",
+          }
+        }).showToast();
+      }
+    </script>
+  </body>
 </html>
