--- a/App/Views/menu.html
+++ b/App/Views/menu.html
@@ -1,4 +1,5 @@
 {% if islogin %}
+<div class="flex flex-col w-80 sm:w-56 bg-white rounded-r-3xl overflow-hidden">
     <ul class="flex flex-col py-4">
         <li>
             <a href="/student"
@@ -48,4 +49,5 @@
         </a>
         </li>
     </ul>
+</div>
 {% endif %}
