added reusable user login page

--- a/App/Views/Admin/Auth/login.html
+++ b/App/Views/Admin/Auth/login.html
@@ -1,29 +1,1 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block body %}
-<form class="white" method="post">
-  <h5 class="grey-text text-darken-0">Admin Login</h5>
-  <div class="input-field">
-    <label for="email">Email</label
-    ><input
-      type="email"
-      name="email"
-      id="email"
-      value="nikkyamresh8@gmail.com"
-      required
-    />
-  </div>
-  <div class="input-field">
-    <label for="password">Password</label
-    ><input
-      type="password"
-      id="password"
-      value="test"
-      name="password"
-      required
-    />
-  </div>
-  <div class="input-field">
-    <button class="btn bg-orange lighten-1 z-depth-0">Login</button>
-  </div>
-</form>
-
-{% endblock %}
+{% extends "login.html" %} {% block loginType %}Sign in as Admin{% endblock %}
